--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -7,11 +7,13 @@
 
 	<!-- Primary Nav -->
 	<ul class="flex b grey-3">
-		<li><a href="/products" class="pa3 no-underline db">Products</a></li>
+		<li><a href="/de-vereniging" class="pa3 no-underline db">De vereniging</a></li>
 
-		<li><a href="/values" class="pa3 no-underline db">Values</a></li>
+		<li><a href="/lid-worden" class="pa3 no-underline db">Lid worden</a></li>
 
-		<li><a href="/post" class="pa3 no-underline db">Blog</a></li>
+		<li><a href="/foto-album" class="pa3 no-underline db">Foto's</a></li>
+
+		<li><a href="/donateur-worden" class="pa3 no-underline db">Donteur worden</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
 	</ul>
