--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -7,10 +7,8 @@
 			<div>
 				<h3 class="f4 b lh-title mb2 primary">Social media</h3>
 				<ul class="mhn2">
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-facebook") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-twitter") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-instagram") }}
-					{{ partial "social-icon" (dict "link" "#" "svg" "icons-vimeo") }}
+					{{ partial "social-icon" (dict "link" "https://www.facebook.com/togidohekelingen/" "svg" "icons-facebook") }}
+					{{ partial "social-icon" (dict "link" "https://twitter.com/togidomusic" "svg" "icons-twitter") }}
 				</ul>
 			</div>
 
