--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -2,7 +2,7 @@
 
 	<!-- Logo -->
 	<a href="/" class="pa3 db mr4 h-100 w3 flex-none">
-		<img src="/img/logo.svg" alt="Kaldi logo" class="br0 db mb0 w-100"/>
+		<img src="/img/logo.svg" alt="Togido" class="br0 db mb0 w-100"/>
 	</a>
 
 	<!-- Primary Nav -->
@@ -13,7 +13,7 @@
 
 		<li><a href="/foto-album" class="pa3 no-underline db">Foto's</a></li>
 
-		<li><a href="/donateur-worden" class="pa3 no-underline db">Donteur worden</a></li>
+		<li><a href="/donateur-worden" class="pa3 no-underline db">Donateur worden</a></li>
 
 		<li><a href="/contact" class="pa3 no-underline db">Contact</a></li>
 	</ul>
