--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -1,7 +1,8 @@
 {{ define "main" }}
 
-{{ partial "jumbotron" (dict "imageUrl" "/img/sheet-music.jpg" "title" "Latest stories") }}
+{{ partial "jumbotron" (dict "imageUrl" "/img/sheet-music.jpg" "title" .Title) }}
 
+<h1>DIT IS LIST HTML</h1>
 <div class="mw7 center">
   <ul class="flex-ns flex-wrap mhn1-ns pa3">
       {{ range (.Paginator 4).Pages.ByPublishDate.Reverse }}
